--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-red-contrib-bluelinky",
-  "version": "0.0.1",
-  "description": "A Node Red Library for BlueLinky, a Hyundai 3rd party wrapper",
+  "version": "0.0.3-alpha",
+  "description": "A Node Red Library for BlueLinky, a Hyundai 3rd-party wrapper",
   "main": "bluelinky.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,11 +13,12 @@
   "keywords": [
     "Hyundai",
     "Bluelink",
-    "Bluelinky"
+    "Bluelinky",
+    "node-red"
   ],
   "node-red": {
     "nodes": {
-      "get-vehicles": "bluelinky.js"
+      "bluelinky": "bluelinky.js"
     }
   },
   "author": "Sondre Tungesvik Njåstad",
