--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-red-contrib-bluelinky",
-  "version": "0.0.5-alpha",
+  "version": "0.0.7-alpha",
   "description": "A Node Red Library for BlueLinky, a Hyundai 3rd-party wrapper",
   "main": "bluelinky.js",
   "scripts": {
@@ -22,6 +22,9 @@
     }
   },
   "author": "Sondre Tungesvik Njåstad",
+  "contributors": [
+    "Sean Boult"
+  ],
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/SondreNjaastad/node-red-contrib-bluelinky/issues"
