--- a/package.json
+++ b/package.json
@@ -31,6 +31,6 @@
   },
   "homepage": "https://github.com/SondreNjaastad/node-red-contrib-bluelinky#readme",
   "dependencies": {
-    "bluelinky": "^4.2.1"
+    "bluelinky": "^5.0.0-alpha1"
   }
 }
