--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-red-contrib-bluelinky",
-  "version": "0.0.8-alpha",
+  "version": "0.0.9-alpha",
   "description": "A Node Red Library for BlueLinky, a Hyundai 3rd-party wrapper",
   "main": "bluelinky.js",
   "scripts": {
@@ -31,6 +31,6 @@
   },
   "homepage": "https://github.com/SondreNjaastad/node-red-contrib-bluelinky#readme",
   "dependencies": {
-    "bluelinky": "^5.0.0-alpha1"
+    "bluelinky": "^5.2.0"
   }
 }
