--- a/package.json
+++ b/package.json
@@ -31,6 +31,6 @@
   },
   "homepage": "https://github.com/SondreNjaastad/node-red-contrib-bluelinky#readme",
   "dependencies": {
-    "bluelinky": "^6.0.0-alpha2"
+    "bluelinky": "^7.0.0"
   }
 }
