--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "node-red-contrib-kuvork",
-  "version": "0.0.27",
+  "name": "node-red-contrib-bluelinky",
+  "version": "0.0.19",
   "description": "A Node Red Library for BlueLinky, a Hyundai and Kia 3rd-party wrapper",
   "main": "bluelinky.js",
   "scripts": {
