--- a/package.json
+++ b/package.json
@@ -33,6 +33,6 @@
   },
   "homepage": "https://github.com/SondreNjaastad/node-red-contrib-bluelinky#readme",
   "dependencies": {
-    "bluelinky": "^7.4.1"
+    "bluelinky": "latest"
   }
 }
